samples/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: test-ingress
spec:
  rules:
  - host: productpage.com
    http:
      paths:
      - path: /productpage
        backend:
          serviceName: productpage
          servicePort: 9080          
  - http:
      paths:
      - path: /reviews
        backend:
          serviceName: reviews
          servicePort: 9080
      - path: /ratings
        backend:
          serviceName: ratings
          servicePort: 9080
      - path: /api/v1
        backend:
          serviceName: traffic-prometheus
          servicePort: 9090   
      - path: /api/v2
        backend:
          serviceName: traffic-zipkin
          servicePort: 9411
